fixtures/error/retrieveFiltered_noParams.js
module.exports = {
    statusCode: 400,
    detail: 'At least one search parameter is required'
  };
  